--- a/master.css
+++ b/master.css
@@ -11,10 +11,11 @@
 .business-card {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  width: 20rem;
-  height: 5rem;
+  width: 30rem;
+  height: 10rem;
   background-color: floralwhite;
   margin: 2rem;
   padding: 1rem;
@@ -24,11 +25,15 @@
 }
 
 .business-card * {
-
-  font-size: 10pt;
+  font-size: 14pt;
   color: #444444;
 }
 
 .business-card__name {
   text-transform: uppercase;
+}
+
+.service-icon {
+  width: 1.5rem;
+  /* height: 1.5rem; */
 }
