--- a/master.css
+++ b/master.css
@@ -13,7 +13,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 30rem;
   height: 10rem;
   background-color: floralwhite;
@@ -30,10 +30,17 @@
 }
 
 .business-card__name {
+  margin-top: 1rem;
   text-transform: uppercase;
 }
 
+
+.icon-container {
+  display: flex;
+  flex-direction: row;
+}
 .service-icon {
   width: 1.5rem;
+
   /* height: 1.5rem; */
 }
