--- a/master.css
+++ b/master.css
@@ -38,9 +38,15 @@
 .icon-container {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+  width: 10rem;
 }
 .service-icon {
-  width: 1.5rem;
+  /* width: 1.5rem; */
+
+  height: 2rem;
+  margin: 3px;;
+}
 
   /* height: 1.5rem; */
 }
