--- a/master.css
+++ b/master.css
@@ -38,7 +38,7 @@
 .icon-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   width: 10rem;
 }
 .service-icon {
@@ -48,5 +48,24 @@
   margin: 3px;;
 }
 
-  /* height: 1.5rem; */
+a[title].icon-link:hover {
+  position: relative;
+}
+a[title].icon-link:hover::before {
+  content: attr(title);
+  font-size: 8pt;
+  font-weight: bold;
+  font-style: normal;
+  position: absolute;
+  overflow-x: visible;
+  padding: 0.5rem 3px;
+  text-align: center;
+  border-radius: 5px;
+  color: white;
+  top: 100%;
+  left: 0;
+  /* height: 2rem; */
+  width: 5rem;
+  z-index: 10;
+  background-color: black;
 }
