--- a/master.css
+++ b/master.css
@@ -13,6 +13,8 @@
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
+  text-align: center;
+
   justify-content: space-around;
   width: 30rem;
   height: 10rem;
