Add general delivery icon

--- a/master.css
+++ b/master.css
@@ -17,7 +17,7 @@
 
   justify-content: space-around;
   width: 30rem;
-  height: 10rem;
+  height: 12rem;
   background-color: floralwhite;
   margin: 2rem;
   padding: 1rem;
@@ -44,7 +44,7 @@
   width: 10rem;
 }
 .service-icon {
-  /* width: 1.5rem; */
+  width: 2rem;
 
   height: 2rem;
   margin: 3px;;
